--- a/cristo.html
+++ b/cristo.html
@@ -10,8 +10,8 @@ CRISTO REDENTOR
 CRISTO REDENTOR<BR><P>
 </MARQUEE>
 </FONT>
-<H1>El Cristo Redentor es una obra cuya significaci髇 se relaciona con el imaginario religioso de Brasil. Para este pa韘, fuertemente influenciado por el catolicismo, Cristo se representa como s韒bolo de redenci髇, s韒bolo de perd髇 y s韒bolo de protecci髇.</H1>
-<IMG SRC="CRISTO.JPG" WIDTH=600>
+<H1>El Cristo Redentor es una obra cuya significaci贸n se relaciona con el imaginario religioso de Brasil. Para este pa铆s, fuertemente influenciado por el catolicismo, Cristo se representa como s铆mbolo de redenci贸n, s铆mbolo de perd贸n y s铆mbolo de protecci贸n.</H1>
+<IMG SRC="cristo.jpg" WIDTH=600>
 <CENTER>
 </BODY>
 </HTML>
