--- a/encabezado.html
+++ b/encabezado.html
@@ -4,7 +4,7 @@
 </HEAD>
 <BODY  BGCOLOR="73AA78">
 <CENTER>
-<IMG SRC="LA.PNG" WIDTH=100% HEIGHT=100%>
+<IMG SRC="la.png" WIDTH=100% HEIGHT=100%>
 </CENTER>
 </BODY>
 </HTML>
