--- a/inicio.html
+++ b/inicio.html
@@ -3,6 +3,6 @@
 <TITLE>INICIO</TITLE>
 </HEAD>
 <BODY BGCOLOR="82E563">
-<IMG SRC="MARAVILLA.JPG" WIDTH=100% HEIGHT=100%>
+<IMG SRC="maravilla.jpg" WIDTH=100% HEIGHT=100%>
 </BODY>
 </HTML>
