--- a/murall.html
+++ b/murall.html
@@ -10,8 +10,8 @@ MURALLA CHINA
 MURALLA CHINA<BR><P>
 </MARQUEE>
 </FONT>
-<H1>Construida entre el 770 y el 476 aC, la Gran Muralla China es una maravilla arquitect髇ica y el mayor proyecto de defensa militar del mundo antiguo. Mide 21.196,18 km y tiene una altura promedio de 7.8 metros. Cumple varias funciones como combate, comando, observaci髇, comunicaci髇 y ocultaci髇.</H1>
-<IMG SRC="MURALLA.JPG" WIDTH=600>
+<H1>Construida entre el 770 y el 476 aC, la Gran Muralla China es una maravilla arquitect贸nica y el mayor proyecto de defensa militar del mundo antiguo. Mide 21.196,18 km y tiene una altura promedio de 7.8 metros. Cumple varias funciones como combate, comando, observaci贸n, comunicaci贸n y ocultaci贸n.</H1>
+<IMG SRC="muralla.jpg" WIDTH=600>
 <CENTER>
 </BODY>
 </HTML>
