--- a/taj.HTML
+++ b/taj.HTML
@@ -12,7 +12,7 @@ TAJ MAJAL<BR><P>
 </FONT>
 </CENTER>
 <CENTER>
-<VIDEO CONTROLS SRC="TAJ.MP4" WIDTH="550" height="400"></VIDEO>
+<VIDEO CONTROLS SRC="taj.mp4" WIDTH="550" height="400"></VIDEO>
 </CENTER>
 </BODY>
 </HTML>
