--- a/chichen.html
+++ b/chichen.html
@@ -3,6 +3,6 @@
 <TITLE> CHICHEN</TITLE>
 </HEAD>
 <BODY BGCOLOR="9DC7EE">
-<IMG SRC="chichen.png" WIDTH=100% HEIGHT=100%>
+<IMG SRC="chichen.jpg" WIDTH=100% HEIGHT=100%>
 </BODY>
 </HTML>
