--- a/machu.html
+++ b/machu.html
@@ -10,9 +10,9 @@ MACHU PICCHU
 MACHU PICCHU<BR><P>
 </MARQUEE>
 </FONT>
-<H1>Machu Picchu es el sitio arqueolÛgico inca m·s sobresaliente debido a su creativo diseÒo urbano, la belleza de su arquitectura y el fino trabajo en piedra de sus construcciones. En su planificaciÛn se aprovechÛ notablemente la topografÌa de la cima de la montaÒa a la que transformÛ en una imponente llaqta.</H1>
+<H1>Machu Picchu es el sitio arqueol√≥gico inca m√°s sobresaliente debido a su creativo dise√±o urbano, la belleza de su arquitectura y el fino trabajo en piedra de sus construcciones. En su planificaci√≥n se aprovech√≥ notablemente la topograf√≠a de la cima de la monta√±a a la que transform√≥ en una imponente llaqta.</H1>
 <MARQUEE SCROLI RIGHT>
-<IMG SRC="MACHU.JPG" height=400>
+<IMG SRC="machu.jpg" height=400>
 </MARQUEE>
 <CENTER>
 </BODY>
